updated pacakge.json description field

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eballeste.github.io",
   "version": "1.0.0",
-  "description": "ugly tests",
+  "description": "ugly scripts",
   "main": "index.js",
   "repository": {
     "url": "https://github.com/eballeste/eballeste.github.io",
